examples/example_053/example_053.v
Require Import Top.Prop.Foo.
Fail Check Foo.n.
